add.ejs 17줄에 cols추가

--- a/views/add.ejs
+++ b/views/add.ejs
@@ -13,9 +13,9 @@
     </ol>
     <article>
         <form action="/topic/add" method="POST">
-            <p><input type="test" name="title"></p>
-            <p><textarea type="test" name="description"></textarea></p>
-            <p><input type="test" name="author"></p>
+            <p><input type="text" name="title" placeholder="제목"></p>
+            <p><textarea type="text" name="description" placeholder="내용입력" cols="100"></textarea></p>
+            <p><input type="text" name="author" placeholder="저자"></p>
             <p><input type="submit"></p>
         </form>
     </article>
