--- a/views/view.ejs
+++ b/views/view.ejs
@@ -10,23 +10,26 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    <title>게시판</title>
+    <title>Server Side JavaScript</title>
 </head>
 <body>
-    <h1>Server Side Javascript</h1>
+    <h1><a href="/topic">Server Side Javascript</a></h1>
     <ol>
         <% for(i=0;i<topics.length;i++) {%>
-        <li><%= topics[i].title %> &nbsp;:&nbsp; <%= topics[i].description %> </li>
+        <a href="/topic/<%= topics[i].id %>">
+        <li><%= topics[i].title %> </a> &nbsp;:&nbsp; <%= topics[i].description %> </li>
         <% } %>
     </ol>
-    <article>
-        <form action="/topic/add" method="POST">
-            <p><input type="text" name="title" placeholder="제목"></p>
-            <p><textarea type="text" name="description" placeholder="내용입력" cols="100"></textarea></p>
-            <p><input type="text" name="author" placeholder="저자"></p>
-            <p><input type="submit"></p>
-            <a href="/topic"><button type="button" class="btn btn-primary" value="추가">처음으로</button></a>
-        </form>
-    </article>
+    <% if(topic) {  %>
+    <h2><%= topic.title %></h2>
+    <p><%= topic.description %></p>
+    <p>by <%= topic.author %></p>
+        <a href="/topic/add"><button type="button" class="btn btn-danger">삭제</button></a>
+        <a href="/topic/add"><button type="button" class="btn btn-success">수정</button></a>
+    <% } else {  %>
+        <h2>Welcome</h2>
+        This is Server Side JavaScript Tutorial <br>
+        <a href="/topic/add"><button type="button" class="btn btn-primary">추가</button></a>
+    <% } %>
 </body>
 </html>
