delete 기능 추가 및 테이블 정리 진행 중간과정 저장

--- a/views/view.ejs
+++ b/views/view.ejs
@@ -14,10 +14,33 @@
 </head>
 <body>
     <h1><a href="/topic">Server Side Javascript</a></h1>
+    <table class="table table-dark">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>TITLE</th>
+            <th>DESCRIPTIOn</th>
+            <th>AUTHON</th>
+            <th>DELETE</th>
+          </tr>
+        </thead>
+        <tbody>
+            <% for(i=0;i<topics.length;i++) {%>
+          <tr>
+            <td>John</td>
+            <td>Doe</td>
+            <td>john@example.com</td>
+            <td>Delete</td>
+          </tr>
+            <% } %>
+        </tbody>
+      </table>
     <ol>
         <% for(i=0;i<topics.length;i++) {%>
         <a href="/topic/<%= topics[i].id %>">
-        <li><%= topics[i].title %> </a> &nbsp;:&nbsp; <%= topics[i].description %> </li>
+        <li><%= topics[i].title %> </a> &nbsp;:&nbsp; <%= topics[i].description %>
+            <a href="/topic/add"><button type="button" class="btn btn-danger">삭제</button></a>
+        </li>
         <% } %>
     </ol>
     <% if(topic) {  %>
@@ -25,7 +48,7 @@
     <p><%= topic.description %></p>
     <p>by <%= topic.author %></p>
         <a href="/topic/add"><button type="button" class="btn btn-danger">삭제</button></a>
-        <a href="/topic/add"><button type="button" class="btn btn-success">수정</button></a>
+        <a href="/topic/edit/<%= topic.id %>"><button type="button" class="btn btn-success">수정</button></a>
     <% } else {  %>
         <h2>Welcome</h2>
         This is Server Side JavaScript Tutorial <br>
