--- a/views/view.ejs
+++ b/views/view.ejs
@@ -19,7 +19,7 @@
           <tr>
             <th>ID</th>
             <th>TITLE</th>
-            <th>DESCRIPTIOn</th>
+            <th>DESCRIPTION</th>
             <th>AUTHON</th>
             <th>DELETE</th>
           </tr>
@@ -27,9 +27,10 @@
         <tbody>
             <% for(i=0;i<topics.length;i++) {%>
           <tr>
-            <td>John</td>
-            <td>Doe</td>
-            <td>john@example.com</td>
+            <td><%= topics[i].id %></td>
+            <td> <a href="/topic/<%= topics[i].id %>"><%= topics[i].title %></a></td>
+            <td><%= topics[i].description %></td>
+            <td><%= topics[i].author %></td>
             <td>Delete</td>
           </tr>
             <% } %>
